--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.main{
+
+}
+
+.nav-bar {
+    position: sticky;
+    top: 0;
+    width: auto;
+    background-color: #3f51b5;
+    color: #fff;
+    display: flex;
+    padding: 0 16px;
+    align-items: center;
+    height: 56px;
+    font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
+}
+
+.header {
+    background-color: tan;
+    height: 500px;
+    width: auto;
+    text-align: center;
+}
