moved everything into components and added about me component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,14 @@
 <main class="main">
-    <div class="nav-bar">
-      <nav>
-        <button mat-button>Home</button>
-        <button mat-button>About</button>
-      </nav>
-    </div>
-    <div class="header">
-      <h1>Hello. My name is Timothy Schlottman</h1>
-      <h3>Software Engineer</h3>
-    </div>
-    <div class="body">
-      <p>Time</p>
-      <p>To</p>
-      <p>Temporarily</p>
-      <p>Fill</p>
-      <p>This</p>
-      <p>Home</p>
-      <p>Page</p>
-      <p>With</p>
-      <p>Useless</p>
-      <p>Text</p>
-      <p>So</p>
-      <p>I</p>
-      <p>Can</p>
-      <p>Test</p>
-      <p>The</p>
-      <p>Nav</p>
-      <p>Bar</p>
-      <svg width="400" height="400">
-        <rect width="300" height="100" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
-      </svg> 
-    </div>
+  <div class="nav-bar">
+    <app-nav-bar></app-nav-bar>
+  </div>
+  <div  class="header">
+    <app-home></app-home>
+  </div>  
+  <div class="body">
+    <app-about></app-about>
+  </div>
+  <div class="footer"></div>
 </main>
 
 
