Added experience drop down and fixed styling

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,16 @@
 <div>
     <nav>
-      <button mat-button class="button">Home</button>
-      <button mat-button class="button">About</button>
+      <div class="nav-left">
+        <button mat-button class="button">Home</button>
+        <button mat-button class="button">About</button>
+        <button mat-button class="button">Experience</button>
+        <button mat-button class="button">Certifications</button>
+        <button mat-button class="button">Contact</button>
+      </div>
+      <div class="nav-right">
+        <a href="https://www.linkedin.com/in/timothy-schlottman-650794a5/">
+          <img class="logo" src="/assets/linkedin-icon.webp">
+        </a>
+      </div>
     </nav>
 </div>
