--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,3 +5,8 @@
     and DAX. Seeking a challenging opportunity to apply these skills and further advance my career in a
     dynamic professional environment.
 </p>
+<h1>Education</h1>
+<p class="objectives">
+    Graduated from Southeast Missouri State University with a bachelor's degree in 
+    Computer Science and a minor in Mathematics
+</p>
