--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   </div>  
   <div class="body">
     <app-about></app-about>
+    <app-experience></app-experience>
   </div>
   <div class="footer"></div>
 </main>
