Added certs and fixed linkedin bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,12 @@
   <div  class="header">
     <app-home></app-home>
   </div>  
-  <div class="body">
-    <app-about></app-about>
-    <app-experience></app-experience>
+  <div class="app-body">
+    <app-about class="comp"></app-about>
+      <div class="bottom-border"></div>
+    <app-experience class="comp"></app-experience>
+      <div class="bottom-border"></div>
+    <app-certs class="comp"></app-certs>
   </div>
   <div class="footer"></div>
 </main>
