--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,8 +25,21 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     text-align: center;
 }
 
-.body {
-    padding: 16px 32px;
+.app-body {
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 5%;
+}
+
+.comp {
+    margin: 20px;
+}
+
+.bottom-border {
+    width: 60%;
+    height: 1px;
+    margin: 0px auto;
+    border-bottom: 1px solid #969696;
 }
 
 .footer {
