--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="nav-bar">
     <nav>
       <div class="nav-left">
         <button mat-button class="button">Home</button>
@@ -7,9 +7,9 @@
         <button mat-button class="button">Certifications</button>
         <button mat-button class="button">Contact</button>
       </div>
-      <div class="nav-right">
+<div class="nav-right">
         <a href="https://www.linkedin.com/in/timothy-schlottman-650794a5/">
-          <img class="logo" src="/assets/linkedin-icon.webp">
+          <img class="logo" src="assets/linkedin-icon.webp">
         </a>
       </div>
     </nav>
