--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
         <button mat-button class="button">Contact</button>
       </div>
 <div class="nav-right">
-        <a href="https://www.linkedin.com/in/timothy-schlottman-650794a5/">
+        <a href="https://www.linkedin.com/in/timothy-schlottman-650794a5/" target="_blank">
           <img class="logo" src="assets/linkedin-icon.webp">
         </a>
       </div>
