--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,5 +1,6 @@
 .button {
     color:white !important;
+    font-size: 1vw;
 }
 
 .nav-left {
@@ -15,9 +16,11 @@
 .nav-right {
     float: right;
     align-items: center;
+    padding-right: 1vw;
+    // position: absolute;
 }
 
 .logo {
-    width: 56px;
-    height: 56px;
+    width: 4vw;
+    height: 4vw;
 }
