--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -16,7 +16,7 @@
 .nav-right {
     float: right;
     align-items: center;
-    padding-right: 1vw;
+    // padding-right: 1vw;
     // position: absolute;
 }
 
