--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     position: sticky;
     z-index: 1;
     top: 0;
-    width: 100vw;
+    width: auto;
     background-color: purple;
     padding: 0 1vw;
     height: 4vw;
