--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,7 +5,7 @@
     and DAX. Seeking a challenging opportunity to apply these skills and further advance my career in a
     dynamic professional environment.
 </p>
-<h2>Education</h2>
+<p class="title">Education</p>
 <p class="objectives">
     Graduated from Southeast Missouri State University with a bachelor's degree in 
     Computer Science and a minor in Mathematics
