--- a/src/app/certs/certs.component.html
+++ b/src/app/certs/certs.component.html
@@ -1,4 +1,4 @@
 <h1>Certifications</h1>
 <div class="cert">
-    <h3>AZ900 - Azure Fundimentals</h3>
+    <p>&nbsp;● AZ900 - Azure Fundimentals</p>
 </div>
