--- a/src/app/certs/certs.component.scss
+++ b/src/app/certs/certs.component.scss
@@ -1,4 +1,11 @@
-// .cert {
-//     border-bottom: solid grey;
-//     width: 20%;
-// }
+h1 {
+    font-size: 4vw;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+}
+
+.cert {
+    font-size: 2vw;
+    line-height: 3vw;
+    padding-bottom: 2vw;
+}
