--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,6 +1,18 @@
+h1 {
+  font-size: 4vw;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+}
+
+.experience {
+  padding-bottom: 2vw;
+}
+
 .example-accordion {
     display: block;
     // max-width: 750px;
+    font-size: 1vw;
+    line-height: 2vw;
   }
   
   .example-accordion-item {
