--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,13 +22,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .app-body {
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 5%;
+    padding-left: 20vw;
+    padding-right: 20vw;
+    padding-top: 1vw;
+    padding-bottom: 2vw;
 }
 
 .comp {
-    margin: 20px;
+    margin: 10vw;
 }
 
 .bottom-border {
