--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,20 +1,22 @@
 <h1>Experience</h1>
-<cdk-accordion class="example-accordion">
-    @for (item of items; track item; let index = $index) {
-    <cdk-accordion-item #accordionItem="cdkAccordionItem" class="example-accordion-item" role="button" tabindex="0"
-        [attr.id]="'accordion-header-' + index" [attr.aria-expanded]="accordionItem.expanded"
-        [attr.aria-controls]="'accordion-body-' + index">
-        <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
-            <span>
-                <mat-icon [fontIcon]="accordionItem.expanded ? 'keyboard_arrow_up' : 'keyboard_arrow_down'">
-                </mat-icon>
-              </span>
-            {{ item }}
-        </div>
-        <div class="example-accordion-item-body" role="region" [style.display]="accordionItem.expanded ? '' : 'none'"
-            [attr.id]="'accordion-body-' + index" [attr.aria-labelledby]="'accordion-header-' + index">
-            {{ toggleAccordion(index) }}
-        </div>
-    </cdk-accordion-item>
-    }
-</cdk-accordion>
+<div class="experience">
+    <cdk-accordion class="example-accordion">
+        @for (item of items; track item; let index = $index) {
+        <cdk-accordion-item #accordionItem="cdkAccordionItem" class="example-accordion-item" role="button" tabindex="0"
+            [attr.id]="'accordion-header-' + index" [attr.aria-expanded]="accordionItem.expanded"
+            [attr.aria-controls]="'accordion-body-' + index">
+            <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
+                <span>
+                    <mat-icon [fontIcon]="accordionItem.expanded ? 'keyboard_arrow_up' : 'keyboard_arrow_down'">
+                    </mat-icon>
+                  </span>
+                    &nbsp;{{ item }}
+            </div>
+            <div class="example-accordion-item-body" role="region" [style.display]="accordionItem.expanded ? '' : 'none'"
+                [attr.id]="'accordion-body-' + index" [attr.aria-labelledby]="'accordion-header-' + index">
+                {{ toggleAccordion(index) }}
+            </div>
+        </cdk-accordion-item>
+        }
+    </cdk-accordion>
+</div>
