fixed sizing issuge in body

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,16 +1,16 @@
 h1 {
-    font-size: 4vw;
-    padding-bottom: 1vw;
+    font-size: 500%;
+    padding-bottom: 5%;
 }
 
 .title {
-    font-size: 3vw;
-    padding-bottom: 1vw;
+    font-size: 350%;
+    padding-bottom: 5%;
 }
 
 .objectives {
-    font-size: 2vw;
-    line-height: 3vw;
-    padding-bottom: 2vw;
-    padding-left: 1vw;
+    font-size: 250%;
+    line-height: 150%;
+    padding-bottom: 5%;
+    padding-left: 5%;
 }
