--- a/src/app/certs/certs.component.scss
+++ b/src/app/certs/certs.component.scss
@@ -1,11 +1,11 @@
 h1 {
-    font-size: 4vw;
-    padding-top: 2vw;
-    padding-bottom: 2vw;
+font-size: 500%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .cert {
-    font-size: 2vw;
-    line-height: 3vw;
-    padding-bottom: 2vw;
+    font-size: 250%;
+    line-height: 150%;
+    padding-bottom: 5%;
 }
