--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,7 +1,7 @@
 h1 {
-  font-size: 4vw;
-  padding-top: 2vw;
-  padding-bottom: 2vw;
+  font-size: 500%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .experience {
@@ -11,8 +11,8 @@ h1 {
 .example-accordion {
     display: block;
     // max-width: 750px;
-    font-size: 1vw;
-    line-height: 2vw;
+    font-size: 200%;
+    line-height: 200%;
   }
   
   .example-accordion-item {
