--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,10 +22,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .app-body {
-    padding-left: 20vw;
-    padding-right: 20vw;
-    padding-top: 1vw;
-    padding-bottom: 2vw;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .comp {
