Added navigation scrolling and fixed a time bug

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,4 @@
+<div id="about" class="block"></div>  
 <h1>About Me</h1>
 <p class="objectives">
     I am a results-driven software engineer with a proven track record of over 2 years in professional full-stack
