--- a/src/app/certs/certs.component.html
+++ b/src/app/certs/certs.component.html
@@ -1,3 +1,4 @@
+<div id="certs" class="block"></div>    
 <h1>Certifications</h1>
 <div class="cert">
     <p>&nbsp;● AZ900 - Azure Fundimentals</p>
