--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,3 +1,4 @@
+<div id="experience" class="block"></div>  
 <h1>Experience</h1>
 <div class="experience">
     <cdk-accordion class="example-accordion">
